--- a/IOIni/Makefile
+++ b/IOIni/Makefile
@@ -1,7 +1,8 @@
 # Makefile for IOIni
 
 $(MODULE_1_NAME)_SWIFTC_FLAGS = $(DEBUG) $($(OS)_EXTRA_FLAGS) \
-	-module-cache-path $(MODULE_CACHE_PATH)/$(MODULE_1_NAME) -module-name $(MODULE_1_NAME) $($(OS)_SWIFTC_FLAGS) -enable-objc-interop
+	-module-cache-path $(MODULE_CACHE_PATH)/$(MODULE_1_NAME) -module-name $(MODULE_1_NAME) $($(OS)_SWIFTC_FLAGS)
+# -enable-objc-interop
 
 $(MODULE_1_NAME)_Src = $(MODULE_1_NAME)/Error.swift $(MODULE_1_NAME)/parseINI.swift
 $(MODULE_1_NAME)_Obj = $(addsuffix .o, $(basename $($(MODULE_1_NAME)_Src)))
@@ -11,7 +12,7 @@ $(MODULE_1_NAME)_Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10
 $(MODULE_1_NAME)_Linux_SHLIB_PATH = -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux
 $(MODULE_1_NAME)_SHLIB_PATH = $($(MODULE_1_NAME)_$(OS)_SHLIB_PATH)
 
-$(MODULE_1_NAME)_Darwin_LFLAGS = $(INI_SHLIB_PATH) -arch x86_64 -dynamiclib \
+$(MODULE_1_NAME)_Darwin_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -arch x86_64 -dynamiclib \
 	-isysroot $(SDK) \
 	-install_name $(BUILD_ROOT_DIR)/frameworks/$(MODULE_1_NAME).framework/Versions/A/$(MODULE_1_NAME) -Xlinker -rpath -Xlinker @executable_path/../Frameworks \
 	-Xlinker -rpath -Xlinker @loader_path/Frameworks -stdlib=libc++ \
@@ -20,14 +21,18 @@ $(MODULE_1_NAME)_Darwin_LFLAGS = $(INI_SHLIB_PATH) -arch x86_64 -dynamiclib \
 	-Xlinker -add_ast_path -Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftmodule -single_module \
 	-compatibility_version 1 -current_version 1 \
 	-framework Foundation
-$(MODULE_1_NAME)_Linux_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm -lFoundation -shared
+$(MODULE_1_NAME)_Linux_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm -lFoundation \
+	-Xlinker -rpath \
+	-Xlinker -no_deduplicate \
+	-stdlib=libc++ -flto -fuse-ld=gold \
+	-shared
 $(MODULE_1_NAME)_LFLAGS = $($(MODULE_1_NAME)_$(OS)_LFLAGS)
 
 $(MODULE_1_NAME)-install:
-	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).so $(BUILD_ROOT_DIR)/lib/
+	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).so $(BUILD_ROOT_DIR)/lib/lib$(MODULE_1_NAME).so
 	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftmodule $(BUILD_ROOT_DIR)/lib/x86_64
 	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftdoc $(BUILD_ROOT_DIR)/lib/x86_64
-	@chmod +x $(BUILD_ROOT_DIR)/lib/$(MODULE_1_NAME).so
+	@chmod +x $(BUILD_ROOT_DIR)/lib/lib$(MODULE_1_NAME).so
 	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).so $(BUILD_ROOT_DIR)/frameworks/$(MODULE_1_NAME).framework/Versions/A/$(MODULE_1_NAME)
 	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftdoc $(BUILD_ROOT_DIR)/frameworks/$(MODULE_1_NAME).framework/Versions/A/Modules/$(MODULE_1_NAME).swiftmodule/x86_64.swiftdoc
 	@cp $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftmodule $(BUILD_ROOT_DIR)/frameworks/$(MODULE_1_NAME).framework/Versions/A/Modules/$(MODULE_1_NAME).swiftmodule/x86_64.swiftmodule
@@ -60,7 +65,7 @@ $(MODULE_1_NAME)-clean:
 	@rm -rf $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/*.o $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/*.so \
 	$(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/*.swiftmodule $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/*.swiftdoc \
 	$(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/*.d $(MODULE_CACHE_PATH)/$(MODULE_1_NAME) \
-	$(BUILD_ROOT_DIR)/lib/$(MODULE_1_NAME)* $(BUILD_ROOT_DIR)/lib/x86_64/$(MODULE_1_NAME)* \
+	$(BUILD_ROOT_DIR)/lib/$(MODULE_1_NAME)* $(BUILD_ROOT_DIR)/lib/lib$(MODULE_1_NAME)* $(BUILD_ROOT_DIR)/lib/x86_64/$(MODULE_1_NAME)* \
 	$(BUILD_ROOT_DIR)/frameworks/$(MODULE_1_NAME)*
 	
 $(MODULE_1_NAME)/%.o : $(MODULE_1_NAME)/%.swift
