--- a/Extensions/TestHandler/Makefile
+++ b/Extensions/TestHandler/Makefile
@@ -1,19 +1,20 @@
 # Makefile for TestHandler
 
-TestHandler-SWIFTC_FLAGS = $(DEBUG) $($(OS)_EXTRA_FLAGS) \
-	-module-cache-path $(MODULE_CACHE_PATH)/Extensions/$(ExtensionName) -module-name $(ExtensionName) $($(OS)_SWIFTC_FLAGS) -enable-objc-interop \
+$(ExtensionName)_SWIFTC_FLAGS = $(DEBUG) $($(OS)_EXTRA_FLAGS) \
+	-module-cache-path $(MODULE_CACHE_PATH)/Extensions/$(ExtensionName) -module-name $(ExtensionName) $($(OS)_SWIFTC_FLAGS) \
 	-I $(BUILD_ROOT_DIR)/lib -I $(BUILD_ROOT_DIR)/frameworks -F $(BUILD_ROOT_DIR)/frameworks
 
-TestHandler-Src = Extensions/$(ExtensionName)/$(ExtensionName).swift
-TestHandler-Obj = $(addsuffix .o, $(basename $($(ExtensionName)-Src)))
-TestHandler-Modules = $(addprefix $(MODULE_CACHE_PATH)/, $(addsuffix .swiftmodule, $(basename $($(ExtensionName)-Src))))
+$(ExtensionName)_Src = Extensions/$(ExtensionName)/$(ExtensionName).swift
+$(ExtensionName)_Obj = $(addsuffix .o, $(basename $($(ExtensionName)_Src)))
+$(ExtensionName)_Modules = $(addprefix $(MODULE_CACHE_PATH)/, $(addsuffix .swiftmodule, $(basename $($(ExtensionName)_Src))))
 
-TestHandler-Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10 -I$(BUILD_ROOT_DIR)/lib -I$(BUILD_ROOT_DIR)/frameworks \
+$(ExtensionName)_Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10 -I$(BUILD_ROOT_DIR)/lib -I$(BUILD_ROOT_DIR)/frameworks \
 	-F$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/lib
-TestHandler-Linux_SHLIB_PATH = -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux
-TestHandler-SHLIB_PATH = $($(ExtensionName)-$(OS)_SHLIB_PATH)
+$(ExtensionName)_Linux_SHLIB_PATH = -target x86_64-linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux -I/usr/include \
+	-L$(BUILD_ROOT_DIR)/lib
+$(ExtensionName)_SHLIB_PATH = $($(ExtensionName)_$(OS)_SHLIB_PATH)
 
-TestHandler-Darwin_LFLAGS = $($(ExtensionName)-SHLIB_PATH) -arch x86_64 -dynamiclib \
+$(ExtensionName)_Darwin_LFLAGS = $($(ExtensionName)_SHLIB_PATH) -arch x86_64 -dynamiclib \
 	-isysroot $(SDK) \
 	-install_name $(BUILD_ROOT_DIR)/extensions/lib$(ExtensionName).dylib \
 	-stdlib=libc++ \
@@ -22,7 +23,12 @@ TestHandler-Darwin_LFLAGS = $($(ExtensionName)-SHLIB_PATH) -arch x86_64 -dynamic
 	-compatibility_version 1 -current_version 1 \
 	-framework Foundation -framework $(MODULE_2_NAME) -framework $(MODULE_1_NAME)
 
-TestHandler-Linux_LFLAGS = $($(ExtensionName)-SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm -lFoundation -lProcessCheckerExtension -lini -shared
+$(ExtensionName)_Linux_LFLAGS = $($(ExtensionName)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm \
+	-lFoundation -l$(MODULE_1_NAME) -l$(MODULE_2_NAME) \
+	-Xlinker -rpath \
+	-Xlinker -no_deduplicate \
+	-stdlib=libc++ -flto -fuse-ld=gold \
+	-shared
 
-TestHandler-LFLAGS = $($(ExtensionName)-$(OS)_LFLAGS)
+$(ExtensionName)_LFLAGS = $($(ExtensionName)_$(OS)_LFLAGS)
 	
