--- a/IOGUI/Makefile
+++ b/IOGUI/Makefile
@@ -16,8 +16,9 @@ $(MODULE_3_NAME)_Modules = $(addprefix $(MODULE_CACHE_PATH)/, $(addsuffix .swift
 $(MODULE_3_NAME)_Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10 -I$(BUILD_ROOT_DIR)/lib -I$(BUILD_ROOT_DIR)/frameworks \
 	-F$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/lib \
 	-I/usr/include
-$(MODULE_3_NAME)_Linux_SHLIB_PATH = -target x86_64-linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux -I/usr/include \
-	-L$(BUILD_ROOT_DIR)/lib
+$(MODULE_3_NAME)_Linux_SHLIB_PATH = -target x86_64--linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
+		-L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift_static/linux \
+		-L$(BUILD_ROOT_DIR)/lib -I/usr/include
 $(MODULE_3_NAME)_SHLIB_PATH = $($(MODULE_3_NAME)_$(OS)_SHLIB_PATH)
 
 $(MODULE_3_NAME)_Darwin_LFLAGS = $($(MODULE_3_NAME)_SHLIB_PATH) -arch x86_64 -dynamiclib \
@@ -29,11 +30,16 @@ $(MODULE_3_NAME)_Darwin_LFLAGS = $($(MODULE_3_NAME)_SHLIB_PATH) -arch x86_64 -dy
 	-Xlinker -add_ast_path -Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_3_NAME)/$(MODULE_3_NAME).swiftmodule -single_module \
 	-compatibility_version 1 -current_version 1 \
 	-framework Foundation
-$(MODULE_3_NAME)_Linux_LFLAGS =  -arch x86_64 $($(MODULE_3_NAME)_SHLIB_PATH) -lncurses -lswiftCore -lswiftGlibc -ldl -lm -lFoundation \
+$(MODULE_3_NAME)_Linux_LFLAGS = $($(MODULE_3_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -lm -ldl -lpthread -licui18n -licuuc -lFoundation -lbsd \
+	-shared -fuse-ld=gold \
 	-Xlinker -rpath \
-	-Xlinker -no_deduplicate \
-	-stdlib=libc++ -flto -fuse-ld=gold \
-	-shared
+	-Xlinker $(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
+	-Xlinker -rpath \
+	-Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_3_NAME)/$(MODULE_3_NAME).swiftmodule \
+	-Xlinker -export-dynamic \
+	-Xlinker --exclude-libs -Xlinker ALL \
+	$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux/x86_64/swift_end.o
+
 $(MODULE_3_NAME)_LFLAGS = $($(MODULE_3_NAME)_$(OS)_LFLAGS)
 
 $(MODULE_3_NAME)-install:
@@ -62,10 +68,10 @@ $(MODULE_3_NAME)-modulecache:
 $(MODULE_3_NAME): $(MODULE_3_NAME)-modulecache $(MODULE_3_NAME).so $(MODULE_3_NAME)-install
 
 $(MODULE_3_NAME).so: $($(MODULE_3_NAME)_Obj) $(MODULE_3_NAME).swiftmodule
-	clang $($(MODULE_3_NAME)_Obj) $($(MODULE_3_NAME)_LFLAGS) -o $(SOURCE_ROOT_DIR)/$(MODULE_3_NAME)/$(MODULE_3_NAME).so
+	$(CLANG) $($(MODULE_3_NAME)_Obj) $($(MODULE_3_NAME)_LFLAGS) -o $(SOURCE_ROOT_DIR)/$(MODULE_3_NAME)/$(MODULE_3_NAME).so
 
 $(MODULE_3_NAME).swiftmodule:
-	$(SWIFTC) -frontend $($(MODULE_3_NAME)_SWIFTC_FLAGS) -emit-module $($(MODULE_3_NAME)_Modules) \
+	$(SWIFT) -frontend $($(MODULE_3_NAME)_SWIFTC_FLAGS) -emit-module $($(MODULE_3_NAME)_Modules) \
 	-parse-as-library \
 	-emit-module-doc-path $(SOURCE_ROOT_DIR)/$(MODULE_3_NAME)/$(MODULE_3_NAME).swiftdoc \
 	-o $(SOURCE_ROOT_DIR)/$(MODULE_3_NAME)/$(MODULE_3_NAME).swiftmodule
@@ -78,7 +84,7 @@ $(MODULE_3_NAME)-clean:
 	$(BUILD_ROOT_DIR)/frameworks/$(MODULE_3_NAME)*
 	
 $(MODULE_3_NAME)/%.o : $(MODULE_3_NAME)/%.swift
-	$(SWIFTC) -frontend -c $(subst $<,,$($(MODULE_3_NAME)_Src)) -primary-file $< \
+	$(SWIFT) -frontend -c $(subst $<,,$($(MODULE_3_NAME)_Src)) -primary-file $< \
 	-emit-module-path $(MODULE_CACHE_PATH)/$(subst .o,.swiftmodule,$@) \
 	-emit-module-doc-path $(MODULE_CACHE_PATH)/$(subst .o,.swiftdoc,$@) \
 	-emit-dependencies-path $(MODULE_CACHE_PATH)/$(subst .swift,.d,$<) \
