--- a/IOIni/Makefile
+++ b/IOIni/Makefile
@@ -2,14 +2,15 @@
 
 $(MODULE_1_NAME)_SWIFTC_FLAGS = $(DEBUG) $($(OS)_EXTRA_FLAGS) \
 	-module-cache-path $(MODULE_CACHE_PATH)/$(MODULE_1_NAME) -module-name $(MODULE_1_NAME) $($(OS)_SWIFTC_FLAGS)
-# -enable-objc-interop
 
 $(MODULE_1_NAME)_Src = $(MODULE_1_NAME)/Error.swift $(MODULE_1_NAME)/parseINI.swift
 $(MODULE_1_NAME)_Obj = $(addsuffix .o, $(basename $($(MODULE_1_NAME)_Src)))
 $(MODULE_1_NAME)_Modules = $(addprefix $(MODULE_CACHE_PATH)/, $(addsuffix .swiftmodule, $(basename $($(MODULE_1_NAME)_Src))))
 
 $(MODULE_1_NAME)_Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10
-$(MODULE_1_NAME)_Linux_SHLIB_PATH = -target x86_64-linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux
+$(MODULE_1_NAME)_Linux_SHLIB_PATH = -target x86_64--linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
+	-L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift_static/linux \
+	-L$(BUILD_ROOT_DIR)/lib
 $(MODULE_1_NAME)_SHLIB_PATH = $($(MODULE_1_NAME)_$(OS)_SHLIB_PATH)
 
 $(MODULE_1_NAME)_Darwin_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -arch x86_64 -dynamiclib \
@@ -21,11 +22,15 @@ $(MODULE_1_NAME)_Darwin_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -arch x86_64 -dy
 	-Xlinker -add_ast_path -Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftmodule -single_module \
 	-compatibility_version 1 -current_version 1 \
 	-framework Foundation
-$(MODULE_1_NAME)_Linux_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm -lFoundation \
+$(MODULE_1_NAME)_Linux_LFLAGS = $($(MODULE_1_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -lm -ldl -lpthread -licui18n -licuuc -lFoundation -lbsd \
+	-shared -static -fuse-ld=gold \
 	-Xlinker -rpath \
-	-Xlinker -no_deduplicate \
-	-stdlib=libc++ -flto -fuse-ld=gold \
-	-shared
+	-Xlinker $(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
+	-Xlinker -rpath \
+	-Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftmodule \
+	$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux/x86_64/swift_end.o
+	
+# --target=x86_64--linux-gnu 
 
 $(MODULE_1_NAME)_LFLAGS = $($(MODULE_1_NAME)_$(OS)_LFLAGS)
 
@@ -55,10 +60,10 @@ $(MODULE_1_NAME)-modulecache:
 $(MODULE_1_NAME): $(MODULE_1_NAME)-modulecache $(MODULE_1_NAME).so $(MODULE_1_NAME)-install
 
 $(MODULE_1_NAME).so: $($(MODULE_1_NAME)_Obj) $(MODULE_1_NAME).swiftmodule
-	clang $($(MODULE_1_NAME)_Obj) $($(MODULE_1_NAME)_LFLAGS) -o $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).so
+	$(CLANG) $($(MODULE_1_NAME)_Obj) $($(MODULE_1_NAME)_LFLAGS) -o $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).so
 
 $(MODULE_1_NAME).swiftmodule:
-	$(SWIFTC) -frontend $($(MODULE_1_NAME)_SWIFTC_FLAGS) -emit-module $($(MODULE_1_NAME)_Modules) -parse-as-library \
+	$(SWIFT) -frontend $($(MODULE_1_NAME)_SWIFTC_FLAGS) -emit-module $($(MODULE_1_NAME)_Modules) -parse-as-library \
 	-emit-module-doc-path $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftdoc \
 	-o $(SOURCE_ROOT_DIR)/$(MODULE_1_NAME)/$(MODULE_1_NAME).swiftmodule
 
@@ -70,7 +75,7 @@ $(MODULE_1_NAME)-clean:
 	$(BUILD_ROOT_DIR)/frameworks/$(MODULE_1_NAME)*
 	
 $(MODULE_1_NAME)/%.o : $(MODULE_1_NAME)/%.swift
-	$(SWIFTC) -frontend -c $(subst $<,,$($(MODULE_1_NAME)_Src)) -primary-file $< \
+	$(SWIFT) -frontend -c $(subst $<,,$($(MODULE_1_NAME)_Src)) -primary-file $< \
 	-emit-module-path $(MODULE_CACHE_PATH)/$(subst .o,.swiftmodule,$@) \
 	-emit-module-doc-path $(MODULE_CACHE_PATH)/$(subst .o,.swiftdoc,$@) \
 	-emit-dependencies-path $(MODULE_CACHE_PATH)/$(subst .swift,.d,$<) \
