--- a/IORunnerBin/Makefile
+++ b/IORunnerBin/Makefile
@@ -14,27 +14,24 @@ $(MODULE_4_NAME)_Obj = $(addsuffix .o, $(basename $($(MODULE_4_NAME)_Src)))
 $(MODULE_4_NAME)_Modules = $(addprefix $(MODULE_CACHE_PATH)/, $(addsuffix .swiftmodule, $(basename $($(MODULE_4_NAME)_Src))))
 
 $(MODULE_4_NAME)_Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10 -I$(BUILD_ROOT_DIR)/lib -I$(BUILD_ROOT_DIR)/frameworks \
-	-F$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/lib \
-	-I/usr/include
+	-L ../lib -F ../frameworks \
+	-F$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/lib
 $(MODULE_4_NAME)_Linux_SHLIB_PATH = -target x86_64--linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
 		-L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift_static/linux \
-		-L$(BUILD_ROOT_DIR)/lib -I/usr/include
+		-L$(BUILD_ROOT_DIR)/lib -I/usr/include -L../lib
 $(MODULE_4_NAME)_SHLIB_PATH = $($(MODULE_4_NAME)_$(OS)_SHLIB_PATH)
 
 $(MODULE_4_NAME)_Darwin_LFLAGS = $($(MODULE_4_NAME)_SHLIB_PATH) -arch x86_64 \
 	-isysroot $(SDK) \
+	-Xlinker -rpath -Xlinker @loader_path/Frameworks -stdlib=libc++ \
 	-Xlinker -rpath -Xlinker -map -Xlinker -no_deduplicate \
 	-Xlinker -rpath -Xlinker $(XCODE)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/macosx \
-	-stdlib=libc++ \
 	-L$(XCODE)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/macosx \
-	-Xlinker -add_ast_path -Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_4_NAME)/$(MODULE_4_NAME).swiftmodule \
+	-Xlinker -add_ast_path -Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_4_NAME)/$(MODULE_4_NAME).swiftmodule -single_module \
+	-Xlinker -rpath -Xlinker @executable_path/../lib/x86_64/$(MODULE_4_NAME).swiftmodule \
+	-Xlinker -rpath -Xlinker @executable_path/../lib \
+	-Xlinker -rpath -Xlinker @executable_path/../frameworks \
 	-framework Foundation -framework $(MODULE_1_NAME) -framework $(MODULE_3_NAME) -framework $(MODULE_2_NAME)
-$(MODULE_4_NAME)_Linux_LFLAGS = $($(MODULE_2_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -lm -ldl -lpthread -licui18n -licuuc -lFoundation -lbsd -l$(MODULE_1_NAME) \
-	-l$(MODULE_2_NAME) -l$(MODULE_3_NAME) -lncurses \
-	-fuse-ld=gold \
-	-Xlinker -rpath \
-	-Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_2_NAME)/$(MODULE_2_NAME).swiftmodule \
-	-Xlinker --exclude-libs -Xlinker ALL
 $(MODULE_4_NAME)_Linux_LFLAGS = $($(MODULE_4_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -lm -ldl -lpthread -licui18n -licuuc -lFoundation -lbsd \
 	-lncurses -l$(MODULE_1_NAME) -l$(MODULE_2_NAME) -l$(MODULE_3_NAME) \
 	-fuse-ld=gold \
@@ -43,7 +40,9 @@ $(MODULE_4_NAME)_Linux_LFLAGS = $($(MODULE_4_NAME)_SHLIB_PATH) -lswiftCore -lswi
 	-Xlinker -rpath \
 	-Xlinker $(SOURCE_ROOT_DIR)/$(MODULE_4_NAME)/$(MODULE_4_NAME).swiftmodule \
 	-Xlinker -export-dynamic \
-	-Xlinker -static \
+	-Xlinker --exclude-libs -Xlinker ALL \
+	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib/x86_64/$(MODULE_4_NAME).swiftmodule' \
+	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
 	$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux/x86_64/swift_end.o
 $(MODULE_4_NAME)_LFLAGS = $($(MODULE_4_NAME)_$(OS)_LFLAGS)
 
