--- a/IOGUI/Makefile
+++ b/IOGUI/Makefile
@@ -23,7 +23,7 @@ $(MODULE_3_NAME)_SHLIB_PATH = $($(MODULE_3_NAME)_$(OS)_SHLIB_PATH)
 
 $(MODULE_3_NAME)_Darwin_LFLAGS = $($(MODULE_3_NAME)_SHLIB_PATH) -arch x86_64 -dynamiclib \
 	-isysroot $(SDK) -lncurses \
-	-install_name $(BUILD_ROOT_DIR)/frameworks/$(MODULE_3_NAME).framework/Versions/A/$(MODULE_3_NAME) -Xlinker -rpath \
+	-install_name @executable_path/../frameworks/$(MODULE_3_NAME).framework/Versions/A/$(MODULE_3_NAME) -Xlinker -rpath \
 	-Xlinker @executable_path/../Frameworks \
 	-Xlinker -rpath -Xlinker @loader_path/Frameworks -stdlib=libc++ \
 	-L$(XCODE)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/macosx \
