--- a/Extensions/TestHandler/Makefile
+++ b/Extensions/TestHandler/Makefile
@@ -9,26 +9,39 @@ $(ExtensionName)_Obj = $(addsuffix .o, $(basename $($(ExtensionName)_Src)))
 $(ExtensionName)_Modules = $(addprefix $(MODULE_CACHE_PATH)/, $(addsuffix .swiftmodule, $(basename $($(ExtensionName)_Src))))
 
 $(ExtensionName)_Darwin_SHLIB_PATH = -target x86_64-apple-macosx10.10 -I$(BUILD_ROOT_DIR)/lib -I$(BUILD_ROOT_DIR)/frameworks \
-	-F$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/lib
-$(ExtensionName)_Linux_SHLIB_PATH = -target x86_64-linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux -I/usr/include \
-	-L$(BUILD_ROOT_DIR)/lib
+	-F$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/frameworks -L$(BUILD_ROOT_DIR)/lib \
+	-L ../lib -F ../frameworks \
+	-I/usr/include
+$(ExtensionName)_Linux_SHLIB_PATH = -target x86_64--linux-gnu -L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
+	-L$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift_static/linux \
+	-L$(BUILD_ROOT_DIR)/lib -I/usr/include -L../lib
 $(ExtensionName)_SHLIB_PATH = $($(ExtensionName)_$(OS)_SHLIB_PATH)
 
 $(ExtensionName)_Darwin_LFLAGS = $($(ExtensionName)_SHLIB_PATH) -arch x86_64 -dynamiclib \
 	-isysroot $(SDK) \
 	-install_name $(BUILD_ROOT_DIR)/extensions/lib$(ExtensionName).dylib \
-	-stdlib=libc++ \
+	-Xlinker -rpath -Xlinker @executable_path/../Frameworks \
+	-Xlinker -rpath -Xlinker @loader_path/Frameworks -stdlib=libc++ \
 	-L$(XCODE)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/macosx \
 	-Xlinker -add_ast_path -Xlinker $(SOURCE_ROOT_DIR)/Extensions/$(ExtensionName)/$(ExtensionName).swiftmodule -single_module \
+	-Xlinker -rpath -Xlinker @executable_path/../lib/x86_64/$(MODULE_3_NAME).swiftmodule \
+	-Xlinker -rpath -Xlinker @executable_path/../lib \
+	-Xlinker -rpath -Xlinker @executable_path/../frameworks \
 	-compatibility_version 1 -current_version 1 \
 	-framework Foundation -framework $(MODULE_2_NAME) -framework $(MODULE_1_NAME)
 
-$(ExtensionName)_Linux_LFLAGS = $($(ExtensionName)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm \
-	-lFoundation -l$(MODULE_1_NAME) -l$(MODULE_2_NAME) \
+$(ExtensionName)_Linux_LFLAGS = $($(ExtensionName)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lm -lpthread -licui18n -licuuc -lFoundation -lbsd \
+	-l$(MODULE_1_NAME) -l$(MODULE_2_NAME) \
+	-shared -fuse-ld=gold \
 	-Xlinker -rpath \
-	-Xlinker -no_deduplicate \
-	-stdlib=libc++ -flto -fuse-ld=gold \
-	-shared
+	-Xlinker $(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux \
+	-Xlinker -rpath \
+	-Xlinker $(SOURCE_ROOT_DIR)/Extensions/$(ExtensionName)/$(ExtensionName).swiftmodule \
+	-Xlinker -export-dynamic \
+	-Xlinker --exclude-libs -Xlinker ALL \
+	-Xlinker -rpath -Xlinker '${ORIGIN}/../lib/x86_64/$(MODULE_3_NAME).swiftmodule' \
+	-Xlinker -rpath -Xlinker '${ORIGIN}/../lib' \
+	$(shell dirname $(shell dirname $(shell which swiftc)))/lib/swift/linux/x86_64/swift_end.o
 
 $(ExtensionName)_LFLAGS = $($(ExtensionName)_$(OS)_LFLAGS)
 	
